# SouthEastArchers

./: .coolify.yml  .dockerignore  .env.dev.example  .env.docker  .env.example  .flake8  .gitattributes  .gitignore  .output.txt  AGENTS.md  ARCHITECTURE.md  BACKGROUND_JOBS_IMPLEMENTATION.md  CHECKS  COOLIFY_QUICK_DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT.md  DEV_TOOL.md  DOCKER_MIGRATION.md  DOCKER_SETUP.md  DOCKER_SETUP_SUMMARY.md  DOKPLOY_DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.web  Dockerfile.worker  FRONTEND_VERSIONS.md  GEMINI.md  GHCR_INTEGRATION.md  INSTALLATION_GUIDE.md  MANAGE.md  Makefile  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  README.md  TESTING.md  VITE_MIGRATION.md  app.py  asgi.py  boost.json  (+31 more)
.github/: DEPLOYMENT.md  copilot-instructions.md
.github/workflows/: build-and-push.yml  ci.yml  deploy-dokku.temp  docker-build.yml
.junie/mcp/: mcp.json
accounts/: admin.py  backends.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py
app/: __init__.py  config.py  dependencies.py  enums.py  exceptions.py  forms.py  main.py  models.py  policies.py  routes_map.py  schedule.py  templating.py
app/Enums/: PaymentMethod.php  PaymentStatus.php  PaymentType.php  ShootLocation.php
app/Mail/: AccountActivatedMail.php  MembershipActivatedMail.php  PaymentReceiptMail.php  WelcomeMail.php
app/Models/: Credit.php  Event.php  Membership.php  News.php  Payment.php  Shoot.php  User.php
app/Services/: PaymentService.php  SumUpService.php
app/Settings/: ApplicationSettings.php
app/cli/: __init__.py  assets.py  lint.py  rbac.py  schedule.py  shoot.py  testing.py  user.py  utils.py
app/controllers/: __init__.py
app/core/: config.py  database.py  security.py  settings.py  vite.py
app/db/: __init__.py  pagination.py  session.py
app/events/: __init__.py  background.py  handlers.py  payloads.py
app/forms/: __init__.py  admin_forms.py  auth_forms.py  credit_purchase.py  event.py  member_forms.py  news.py  registration.py  shooting_night.py
app/models/: __init__.py  application_settings.py  credit.py  credit_purchase.py  event.py  financial_transaction.py  membership.py  news.py  payment.py  rbac.py  shoot.py  shooting_night.py  user.py
app/repositories/: __init__.py  base.py  credit_repository.py  event_repository.py  financial_transaction_repository.py  membership_repository.py  news_repository.py  payment_repository.py  rbac_repository.py  settings_repository.py  shoot_repository.py  shoot_visitor_repository.py  user_repository.py
app/routers/: __init__.py  auth.py  health.py  payment.py  public.py
app/routes/: __init__.py  admin.py  admin_bp.py  auth.py  auth_bp.py  health.py  main.py  member.py  member_bp.py  payment.py  payment_bp.py  public.py  public_bp.py
app/scheduler/: __init__.py  event.py  schedule.py
app/schemas/: __init__.py  admin_forms.py  admin_schemas.py  auth_schemas.py  form_helpers.py  forms.py  member_schemas.py  service_responses.py
app/services/: __init__.py  admin.py  admin_service.py  background_jobs.py  credits.py  event_service.py  events.py  finance.py  finance_service.py  health.py  mail.py  mail_service.py  membership_service.py  memberships.py  news.py  news_service.py  payment_fulfillment.py  payment_processing.py  payment_processing_service.py  payment_service.py  payment_side_effects.py  payments.py  rbac.py  rbac_service.py  recaptcha.py  result.py  settings.py  settings_service.py  shoot_service.py  shoots.py  sumup.py  sumup_service.py  user_service.py  users.py
app/templates/: base.html  event_detail.html  events.html  news_detail.html
app/utils/: __init__.py  checkout_session.py  datetime_utils.py  decorators.py  email.py  formdata.py  helpers.py  mail.py  pdf.py  pydantic_helpers.py  rate_limit.py  session.py  validation.py  vite.py
config/: config.py  context_processors.py  services.php  settings.py  urls.py
core/: tests.py  urls.py  views.py
database/factories/: CreditFactory.php  EventFactory.php  MembershipFactory.php  NewsFactory.php  PaymentFactory.php  ShootFactory.php  UserFactory.php
database/migrations/: 2026_02_10_140522_create_permission_tables.php  2026_02_10_142727_add_fields_to_users_table.php  2026_02_10_142733_create_memberships_table.php  2026_02_10_142734_create_events_table.php  2026_02_10_142735_create_news_table.php  2026_02_10_142736_create_shoots_table.php  2026_02_10_142737_create_shoot_user_table.php  2026_02_10_142739_create_payments_table.php  2026_02_10_142740_create_credits_table.php
database/seeders/: AdminUserSeeder.php  DatabaseSeeder.php  PermissionSeeder.php  RoleSeeder.php
database/settings/: 2026_02_10_142925_create_application_settings.php
deployment/: .env.example  README.md  fix-env.sh  generate-traefik-auth.sh  login-ghcr.sh  setup.sh
deployment/southeastarchers/: docker-compose.yml
docker/: .env.production.example  Dockerfile.dev  Dockerfile.web  QUICK_REFERENCE.md  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  nginx.conf  php.ini  supervisord.conf
docs/: BACKGROUND_JOBS.md  COOLIFY_DEPLOYMENT.md  DATABASE_ACCESS.md  DOCKER_MIGRATION.md  DOKKU_DEPLOYMENT.md  DOKKU_GHCR_SETUP.md  DOKPLOY_DEPLOYMENT.md  EMAIL_CONFIGURATION.md  GHCR_INTEGRATION.md  PAYMENT_PROCESSOR_ABSTRACTION.md  README.md  RQ_WORKER_FIX.md  SCHEDULING.md  SUMUP_WARNING_FIX.md  TYPE_SAFETY.md  URL_GENERATION_FIX.md
events/: admin.py  forms.py  models.py  tests.py
memberships/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
migrations/: alembic.ini  env.py
news/: admin.py  forms.py  models.py  tests.py
nginx/: nginx.conf
routes/: auth.php  web.php
scripts/: docker-run.sh
shooting/: admin.py  apps.py  forms.py  models.py  tests.py
templates/: about.html  base.html  index.html  news.html  news_detail.html
tests/: README.md  conftest.py  helpers.py  http_helpers.py  test_admin.py  test_app.py  test_app_factory.py  test_auth.py  test_main.py  test_member.py  test_public_pages.py  test_registration.py  test_scheduler.py  test_scheduler_jobs.py
(+711 files in other folders)
