[project]
name = "south-east-archers"
version = "1.0.0"
description = "South East Archers Club Website"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "pydantic-settings>=2.14.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.29",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.49",
    "alembic>=1.15.0",
    "click>=8.1.0",
    "blinker>=1.9.0",
    "cryptography>=46.0.5",
    "email-validator==2.3.0",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "MarkupSafe==3.0.3",
    "PyMySQL==1.1.3",
    "itsdangerous==2.2.0",
    "WTForms==3.2.2",
    "gunicorn==26.0.0",
    "sumup==0.0.13",
    "fpdf2>=2.8.6",
]

[dependency-groups]
dev = [
    "watchdog[watchmedo]",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-sugar>=1.1.1",
    "mypy>=1.19.1",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.2",
    "import-linter>=2.10",
    "hypothesis>=6.130.0",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), unused imports (F401), unused variables (F841), isort (I)
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E741",  # Ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


