[project]
name = "south-east-archers"
version = "1.0.0"
description = "South East Archers Club Website"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "pydantic-settings>=2.14.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.29",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.49",
    "alembic>=1.15.0",
    "click>=8.1.0",
    "blinker>=1.9.0",
    "cryptography>=46.0.5",
    "email-validator==2.3.0",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "MarkupSafe==3.0.3",
    "PyMySQL==1.1.3",
    "itsdangerous==2.2.0",
    "gunicorn==26.0.0",
    "sumup==0.0.13",
    "fpdf2>=2.8.6",
]

[dependency-groups]
dev = [
    "watchdog[watchmedo]",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-sugar>=1.1.1",
    "mypy>=1.19.1",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.2",
    "import-linter>=2.10",
]

[project.scripts]
sea = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"

[tool.mypy]
python_version = "3.14"
files = ["app"]
explicit_package_bases = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true


[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/.venv/*",
    "*/venv/*",
    "app/cli/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), unused imports (F401), unused variables (F841), isort (I)
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E741",  # Ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# import-linter – enforces module boundaries
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["app"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Only repositories and dependencies may import app.db directly"
type = "forbidden"
source_modules = [
    "app.cli",
    "app.routes",
    "app.services",
    "app.policies",
]
forbidden_modules = ["app.db.models", "app.db.session", "app.db.base"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Routes must not import the database layer directly"
type = "forbidden"
source_modules = ["app.routes"]
forbidden_modules = ["app.db"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Routes must not import repositories directly"
type = "forbidden"
source_modules = ["app.routes"]
forbidden_modules = ["app.repositories"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Routes must not import policies directly"
type = "forbidden"
source_modules = ["app.routes"]
forbidden_modules = ["app.policies"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Schemas must not import services or routes"
type = "forbidden"
source_modules = ["app.schemas"]
forbidden_modules = ["app.services", "app.routes"]
allow_indirect_imports = true